# everybody-codes-2024

./: .gitignore  .gitmodules  Cargo.toml  README.md
quest-1/: Cargo.toml
quest-1/src/: part_1.rs  part_2.rs  part_3.rs
quest-2/: Cargo.toml
quest-2/src/: part_1.rs  part_2.rs  part_3.rs
utils/: Cargo.toml
utils/src/: lib.rs
