[package]
name = "quest-1"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "q1p1"
path = "src/part_1.rs"
test = false

[[bin]]
name = "q1p2"
path = "src/part_2.rs"
test = false

[[bin]]
name = "q1p3"
path = "src/part_3.rs"

[dependencies]
itertools.workspace = true
winnow.workspace = true
anyhow.workspace = true