[package]
name = "quest-2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "q2p1"
path = "src/part_1.rs"

[[bin]]
name = "q2p2"
path = "src/part_2.rs"

[[bin]]
name = "q2p3"
path = "src/part_3.rs"

[dependencies]
utils.workspace = true
itertools.workspace = true
winnow.workspace = true
anyhow.workspace = true